# slickcmd

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
bc/: Cargo.toml  LICENSE
bc/src/: interpreter.rs  lib.rs  number.rs  parser.rs
slickcmd/: Cargo.toml  build.rs
slickcmd/res/: .gitignore  resource.h  slickcmd.rc  slickcmd.res  slickcmd.sln  slickcmd.vcxproj
slickcmd/src/: app.rs  app_state.rs  calculator.rs  clock_win.rs  command_hist.rs  command_hist_list.rs  command_hist_win.rs  console.rs  console_man.rs  dir_complete.rs  dir_man.rs  error_log.rs  global.rs  key_hook_suppressor.rs  keyboard_input.rs  lib.rs  main.rs  main_win.rs  manual.rs  msg_win.rs  options.rs  options_dlg.rs  shell.rs  startup_link.rs  tray_icon.rs  tray_wins.rs  win_man.rs  wt_focus_man.rs
slickcmd/tests/: calculator_test.rs  dir_man_test.rs
slickcmd_common/: Cargo.toml
slickcmd_common/src/: consts.rs  dlg.rs  font_info.rs  ini.rs  lib.rs  logger.rs  raii.rs  utils.rs  win32.rs  winproc.rs
slickcmd_core/: Cargo.toml
slickcmd_core/src/: ac_list.rs  app_comm.rs  core.rs  global.rs  lib.rs  msg_win.rs
slickcmd_logger/: Cargo.toml
slickcmd_logger/src/: main.rs
slickcmd_shl/: Cargo.toml
slickcmd_shl/src/: global.rs  lib.rs
