[package]
name = "slickcmd_common"
version = "0.1.0"
edition = "2021"

[dependencies]
widestring = "1.1.0"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_Foundation", "Win32_System", "Win32_System_Console", "Win32_Graphics", "Win32_System_LibraryLoader", "Win32_UI", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Security", "Win32_UI_Shell", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Wdk_System_Threading", "Win32_System_Kernel", "Win32_System_Diagnostics_Debug", "Win32_System_Environment", "Win32_Storage_FileSystem", "Win32_System_SystemInformation", "Win32_UI_Controls", "Win32_System_ProcessStatus", "Win32_Globalization", "Win32_System_WindowsProgramming", "Win32_System_Com", "Win32_System_Ole"]
