[package]
name = "slickcmd_core"
version = "2.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
widestring = "1.1.0"
slickcmd_common = {path="../slickcmd_common"}
#slickcmd_common = {git = "C:/Users/zzl/RustroverProjects/slickcmd/slickcmd_common/.git", tag = "v1.0"}

[dependencies.windows]
version = "0.58.0"
features = ["Win32_Foundation", "Win32_System", "Win32_System_Console", "Win32_Graphics", "Win32_System_LibraryLoader", "Win32_UI", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Security", "Win32_UI_Shell", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemServices", "Win32_System_Com"]
